@@ -1,4 +1,4 @@
-/* $PostgreSQL: pgsql/src/interfaces/ecpg/pgtypeslib/dt_common.c,v 1.43 2007/09/30 11:38:48 meskes Exp $ */
+/* $PostgreSQL: pgsql/src/interfaces/ecpg/pgtypeslib/dt_common.c,v 1.44 2007/11/15 21:14:45 momjian Exp $ */
 
 #include "postgres_fe.h"
 
@@ -990,16 +990,12 @@ GetEpochTime(struct tm * tm)
 
 	t0 = gmtime(&epoch);
 
-	tm->tm_year = t0->tm_year;
-	tm->tm_mon = t0->tm_mon;
+	tm->tm_year = t0->tm_year + 1900;
+	tm->tm_mon = t0->tm_mon + 1;
 	tm->tm_mday = t0->tm_mday;
 	tm->tm_hour = t0->tm_hour;
 	tm->tm_min = t0->tm_min;
 	tm->tm_sec = t0->tm_sec;
-
-	if (tm->tm_year < 1900)
-		tm->tm_year += 1900;
-	tm->tm_mon++;
 
 	return;
 }	/* GetEpochTime() */
@@ -2856,8 +2852,8 @@ PGTYPEStimestamp_defmt_scan(char **str, char *fmt, timestamp * d,
 					time_t		et = (time_t) scan_val.luint_val;
 
 					tms = gmtime(&et);
-					*year = tms->tm_year;
-					*month = tms->tm_mon;
+					*year = tms->tm_year + 1900;
+					*month = tms->tm_mon + 1;
 					*day = tms->tm_mday;
 					*hour = tms->tm_hour;
 					*minute = tms->tm_min;
